--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
       border-bottom: 2.5px solid var(--highlight);
       color: var(--highlight);
     }
+    /* FLOATING CART BUTTON - RESPONSIVE */
     .cart-sticky {
       position: fixed;
-      top: 12px; right: 24px;
       background: var(--highlight);
       color: var(--primary-bg);
       border-radius: 100px;
@@ -118,7 +118,7 @@
       box-shadow: 0 4px 16px #c347261b;
       cursor: pointer;
       border: 2px solid var(--primary-bg);
-      transition: background .15s, color .15s, border .15s;
+      transition: background .15s, color .15s, border .15s, box-shadow .17s;
       z-index: 3000;
       display: flex; align-items: center;
     }
@@ -131,11 +131,39 @@
       border-radius: 100px; font-size:.97em;
       font-weight:700; padding: 1px 12px; min-width:28px; margin-left:8px;
     }
+    /* MOBILE: cart floating center bottom */
+    @media (max-width: 600px) {
+      .cart-sticky {
+        left: 50%;
+        right: auto;
+        top: auto;
+        bottom: 18px;
+        transform: translateX(-50%);
+        padding: 12px 24px 12px 32px;
+        min-width: 160px;
+        box-shadow: 0 4px 24px #c347262a;
+        font-size: 1.09em;
+      }
+      .cart-icon { margin-left: -14px; margin-right: 10px; }
+    }
+    /* DESKTOP: cart floating right bottom (but not too close) */
+    @media (min-width: 601px) {
+      .cart-sticky {
+        left: auto;
+        right: 38px;
+        top: auto;
+        bottom: 38px;
+        transform: none;
+        min-width: 170px;
+        font-size: 1.05em;
+        box-shadow: 0 6px 32px #c3472620;
+      }
+      .cart-icon { margin-left: -18px; margin-right: 13px; }
+    }
     @media (max-width: 900px) {
       .main-nav { min-height: 52px; }
       .nav-inner { height: 52px; }
       .nav-list { height: 52px; gap: 22px; }
-      .cart-sticky { right: 7px; top: 12px; font-size: .98em; }
     }
     @media (max-width: 800px) {
       .nav-burger { display: flex; }
@@ -168,23 +196,7 @@
         border-bottom: 1px solid #e6caa0;
         width: 100vw; max-width: 100vw; text-align: left; padding-left: 27px;
       }
-      .cart-sticky { right: 8px; }
       body { padding-top: 52px; }
-    }
-    /* RESPONSIVE FLOATING CART BUTTON FOR MOBILE */
-    @media (max-width: 600px) {
-      .cart-sticky {
-        left: 50%;
-        right: auto;
-        top: auto;
-        bottom: 18px;
-        transform: translateX(-50%);
-        padding: 12px 24px 12px 32px;
-        min-width: 160px;
-        box-shadow: 0 4px 24px #c347262a;
-        font-size: 1.09em;
-      }
-      .cart-icon { margin-left: -14px; margin-right: 10px; }
     }
     @media (max-width: 600px) {
       .section-card, .faq-section, .policy-section { padding: 22px 7px 18px 7px; }
@@ -250,7 +262,6 @@
       display: block;
       text-shadow: 1px 2px 9px #b1371d3b;
     }
-    /* SECTION STYLES */
     main {
       max-width: var(--max-width);
       margin: 0 auto;
@@ -309,7 +320,6 @@
       transition: background .13s;
     }
     .about-readmore-btn:hover, .about-readmore-btn:focus { background: var(--button-hover); color: var(--primary-bg);}
-    /* WHY CHOOSE US */
     .why-list {
       display: flex; flex-wrap: wrap;
       gap: 19px; margin: 15px 0 7px 0;
@@ -334,7 +344,6 @@
       font-weight: 800; font-size: 1em; color: var(--primary-bg); margin-bottom: 6px;
     }
     .why-desc { font-weight: 400; font-size: .98em; color: var(--primary); }
-    /* PRODUCTS */
     .category-section {margin-bottom:54px;}
     .category-grid {
       display: flex; gap: 28px; flex-wrap: wrap; justify-content: center; flex-direction: row;
@@ -403,7 +412,6 @@
       text-align: center;
     }
     .add-btn:disabled { opacity:.6; cursor:not-allowed;}
-    /* DELIVERY INFO */
     .delivery-list {
       display: inline-block;
       text-align: left;
@@ -415,7 +423,6 @@
       padding-left: 1.2em;
     }
     .delivery-list strong { color: var(--primary-bg);}
-    /* FAQ */
     .faq-section {
       background: #fff;
       border-radius: var(--radius);
@@ -443,7 +450,6 @@
     .faq-a:before {
       content: "A:"; color: var(--success); margin-right: 6px; font-weight: 700;
     }
-    /* CONTACT */
     .contact-list {
       display: inline-block; text-align: left;
       margin: 0 auto 10px auto; font-size: 1em; line-height: 1.7;
@@ -451,7 +457,6 @@
       padding-left: 1.2em;
     }
     .contact-list strong { color: var(--primary-bg);}
-    /* CART MODAL */
     .cart-modal-bg {
       display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.37); z-index:1200;
     }
@@ -477,7 +482,6 @@
       text-align: center;
     }
     .cart-modal .action-btn:hover { background: var(--button-hover); color:var(--primary-bg);}
-    /* POLICY PAGES */
     .policy-section {
       background: #fff;
       border-radius: var(--radius);
@@ -500,7 +504,6 @@
       margin-left: 1.5em;
       margin-bottom: 0.5em;
     }
-    /* FOOTER */
     footer {
       background: var(--footer-bg);
       color: var(--primary);
@@ -568,6 +571,9 @@
         <li><a href="#delivery-info">Delivery</a></li>
         <li><a href="#faq">FAQ</a></li>
         <li><a href="#contact">Contact</a></li>
+        <li><a href="#privacy-policy">Privacy</a></li>
+        <li><a href="#terms">Terms</a></li>
+        <li><a href="#return-policy">Returns</a></li>
       </ul>
     </div>
   </nav>
@@ -683,7 +689,6 @@
         <li><strong>Business Hours:</strong> Monday–Saturday: 8:00 AM – 6:00 PM | Sunday: Closed</li>
       </ul>
     </div>
-    <!-- Policy Sections -->
     <div class="policy-section" id="privacy-policy">
       <div class="policy-title">Privacy Policy (Summary)</div>
       <p>
@@ -739,7 +744,6 @@
     </div>
   </footer>
   <script>
-    // Responsive Navigation
     function toggleNavMenu() {
       var nav = document.getElementById('nav-list');
       var bg = document.getElementById('nav-list-bg');
@@ -764,7 +768,6 @@
         bg.classList.remove('show');
       }
     });
-    // Smooth anchor scroll for mobile nav
     window.addEventListener("DOMContentLoaded", function() {
       document.querySelectorAll('.nav-list li a').forEach(function(link){
         link.addEventListener('click', function(e){
@@ -781,7 +784,6 @@
         });
       });
     });
-    // About Read More toggle
     function toggleAbout() {
       var more = document.getElementById("about-more");
       var btn = document.getElementById("aboutReadMoreBtn");
@@ -793,7 +795,6 @@
         btn.textContent = "Read more";
       }
     }
-    // Demo product data
     function randQty() { return Math.floor(Math.random()*15)+7; }
     function randPrice(base) { return base+Math.floor(Math.random()*500); }
     const clothing = [
@@ -851,7 +852,6 @@
       });
       document.getElementById("cart-modal-bg").onclick = closeCart;
     });
-    // Cart Logic
     let cart = [];
     function addToCart(cat, idx) {
       let prod;
