--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
           Our store is conveniently located in Cubao, Quezon City, serving customers all over Metro Manila and across the Philippines. Every product we offer undergoes strict quality checks, and we’re committed to fast shipping, secure payments, and genuine customer care. <br>
           <br>
           <b>Our Mission:</b> To provide affordable, high-quality products that make your daily life easier and more enjoyable.<br>
-          <b>Our Values:</b>
+          <br><b>Our Values:</b>
           <ul style="text-align:left; margin:0 auto 0 0; max-width:95%;">
             <li><b>Customer Satisfaction:</b> We always put customers first.</li>
             <li><b>Quality Assurance:</b> Only products that meet our high standards.</li>
