--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Maryjoy Ravila Retail Mart – Your Trusted Shopping Partner in Quezon City</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Shop fashion, home essentials, small electronics and more at Maryjoy Ravila Retail Mart. Trusted since 2010. Fast delivery, affordable prices, and excellent customer service in Quezon City and nationwide.">
-  <link rel="icon" type="image/png" href="LOGO.png">
+  <link rel="icon" type="image/png" href="image/LOGO.png">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -557,7 +557,7 @@
   <nav class="main-nav" id="main-nav">
     <div class="nav-inner">
       <div class="nav-logo">
-        <img src="LOGO.png" alt="Maryjoy Ravila Retail Mart Logo">
+        <img src="image/LOGO.png" alt="Maryjoy Ravila Retail Mart Logo">
         <span class="nav-brand">Maryjoy Ravila Retail Mart</span>
       </div>
       <button class="nav-burger" aria-label="Open Menu" onclick="toggleNavMenu()">
@@ -577,7 +577,7 @@
   <header>
     <div class="hero-inner">
       <div class="hero-logo">
-        <img src="LOGO.png" alt="Maryjoy Ravila Retail Mart Logo" width="92" height="92">
+        <img src="image/LOGO.png" alt="Maryjoy Ravila Retail Mart Logo" width="92" height="92">
       </div>
       <div class="hero-title">Maryjoy Ravila Retail Mart</div>
       <div class="hero-subtitle">Your Trusted Shopping Partner in Quezon City</div>
@@ -795,26 +795,26 @@
     function randQty() { return Math.floor(Math.random()*15)+7; }
     function randPrice(base) { return base+Math.floor(Math.random()*500); }
     const clothing = [
-      { name: "Classic T-Shirt", price: randPrice(250), qty: randQty(), img: "image/Pictures1" },
-      { name: "Summer Dress", price: randPrice(550), qty: randQty(), img: "image/Pictures2" },
-      { name: "Blue Denim Jeans", price: randPrice(680), qty: randQty(), img: "image/Pictures3" },
-      { name: "Canvas Sneakers", price: randPrice(790), qty: randQty(), img: "image/Pictures4" }
+      { name: "Classic T-Shirt", price: randPrice(250), qty: randQty(), img: "image/Pictures1.png" },
+      { name: "Summer Dress", price: randPrice(550), qty: randQty(), img: "image/Pictures2.png" },
+      { name: "Blue Denim Jeans", price: randPrice(680), qty: randQty(), img: "image/Pictures3.png" },
+      { name: "Canvas Sneakers", price: randPrice(790), qty: randQty(), img: "image/Pictures4.png" }
     ];
     const household = [
-      { name: "Comfort Bedding Set", price: randPrice(1190), qty: randQty(), img: "image/Pictures5" },
-      { name: "Kitchen Knife Set", price: randPrice(490), qty: randQty(), img: "image/Pictures6" },
-      { name: "Portable Blender", price: randPrice(980), qty: randQty(), img: "image/Pictures7" },
-      { name: "All-Purpose Cleaner", price: randPrice(120), qty: randQty(), img: "image/Pictures8" }
+      { name: "Comfort Bedding Set", price: randPrice(1190), qty: randQty(), img: "image/Pictures5.png" },
+      { name: "Kitchen Knife Set", price: randPrice(490), qty: randQty(), img: "image/Pictures6.png" },
+      { name: "Portable Blender", price: randPrice(980), qty: randQty(), img: "image/Pictures7.png" },
+      { name: "All-Purpose Cleaner", price: randPrice(120), qty: randQty(), img: "image/Pictures8.png" }
     ];
     const electronics = [
-      { name: "Wireless Headphones", price: randPrice(1200), qty: randQty(), img: "image/Pictures9" },
-      { name: "Fast Charger", price: randPrice(350), qty: randQty(), img: "image/Pictures10" },
-      { name: "Smart Home Plug", price: randPrice(680), qty: randQty(), img: "image/Pictures11" }
+      { name: "Wireless Headphones", price: randPrice(1200), qty: randQty(), img: "image/Pictures9.png" },
+      { name: "Fast Charger", price: randPrice(350), qty: randQty(), img: "image/Pictures10.png" },
+      { name: "Smart Home Plug", price: randPrice(680), qty: randQty(), img: "image/Pictures11.png" }
     ];
     const accessories = [
-      { name: "Leather Wallet", price: randPrice(390), qty: randQty(), img: "image/Pictures12" },
-      { name: "Canvas Tote Bag", price: randPrice(260), qty: randQty(), img: "image/Pictures13" },
-      { name: "Stylish Hat", price: randPrice(210), qty: randQty(), img: "image/Pictures14" }
+      { name: "Leather Wallet", price: randPrice(390), qty: randQty(), img: "image/Pictures12.png" },
+      { name: "Canvas Tote Bag", price: randPrice(260), qty: randQty(), img: "image/Pictures13.png" },
+      { name: "Stylish Hat", price: randPrice(210), qty: randQty(), img: "image/Pictures14.png" }
     ];
     function renderCategory(list, domId, cat) {
       const el = document.getElementById(domId);
@@ -824,7 +824,7 @@
         card.className = 'item-card';
         card.innerHTML = `
           <div class="item-img-holder">
-            <span class="item-img-">🛍️</span>
+            ${item.img ? `<img src="${item.img}" alt="${item.name}">` : `<span class="item-img-">🛍️</span>`}
           </div>
           <div class="item-name">${item.name}</div>
           <div class="item-qty">Stock: ${item.qty}</div>
