--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
       <h2 class="section-title"><span class="emoji">📞</span>CONTACT US</h2>
       <ul class="contact-list">
         <li><strong>Email:</strong> <a href="mailto:admin@maryjoyravilamart.com">admin@maryjoyravilamart.com</a>, <a href="mailto:support@maryjoyravilamart.com">support@maryjoyravilamart.com</a></li>
-        <li><strong>Phone:</strong> +63 912 345 6789</li>
+        <li><strong>Phone:</strong> </li>
         <li><strong>Address:</strong> 1234 Aurora Blvd., Cubao, Quezon City, Metro Manila, 1109, Philippines</li>
         <li><strong>Business Hours:</strong> Monday–Saturday: 8:00 AM – 6:00 PM | Sunday: Closed</li>
       </ul>
@@ -725,7 +725,7 @@
         <div class="footer-contact-title"><b>Maryjoy Ravila Retail Mart</b></div>
         <div>
           1234 Aurora Blvd., Cubao, Quezon City, Metro Manila, 1109, Philippines<br>
-          <b>Phone:</b> +63 912 345 6789 &nbsp;|&nbsp; <b>Email:</b>
+          <b>Phone:</b> +63 917 625 3841 &nbsp;|&nbsp; <b>Email:</b>
           <a href="mailto:admin@maryjoyravilamart.com">admin@maryjoyravilamart.com</a>
         </div>
         <div>Business Registration No: 1234567890 | VAT No: 987654321</div>
