--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
           <b>Phone:</b> +63 917 625 3841 &nbsp;|&nbsp; <b>Email:</b>
           <a href="mailto:admin@maryjoyravilamart.com">admin@maryjoyravilamart.com</a>
         </div>
-        <div>Business Registration No: 1234567890 | VAT No: 987654321</div>
+        <div>Business Registration No: 1234567890 | VAT No: 237-507-038-000</div>
       </div>
       <div class="footer-links">
         <a href="#privacy-policy">Privacy Policy</a> |
