--- a/index.html
+++ b/index.html
@@ -681,8 +681,8 @@
       <h2 class="section-title"><span class="emoji">📞</span>CONTACT US</h2>
       <ul class="contact-list">
         <li><strong>Email:</strong> <a href="mailto:admin@maryjoyravilamart.com">admin@maryjoyravilamart.com</a>, <a href="mailto:support@maryjoyravilamart.com">support@maryjoyravilamart.com</a></li>
-        <li><strong>Phone:</strong> </li>
-        <li><strong>Address:</strong> 1234 Aurora Blvd., Cubao, Quezon City, Metro Manila, 1109, Philippines</li>
+        <li><strong>Phone:</strong>+639176253841</li>
+        <li><strong>Address:</strong>BLK 12 LOT 5 SAN VICENTE STREET, BARANGAY SAN AGUSTIN, CITY OF DASMARIÑAS, CAVITE, REGION IV-A, PHILIPPINES</li>
         <li><strong>Business Hours:</strong> Monday–Saturday: 8:00 AM – 6:00 PM | Sunday: Closed</li>
       </ul>
     </div>
@@ -728,7 +728,7 @@
           <b>Phone:</b> +63 917 625 3841 &nbsp;|&nbsp; <b>Email:</b>
           <a href="mailto:admin@maryjoyravilamart.com">admin@maryjoyravilamart.com</a>
         </div>
-        <div>Business Registration No: 1234567890 | VAT No: 237-507-038-000</div>
+        <div>Business Registration No: 1234567890 | VAT No: 987654321</div>
       </div>
       <div class="footer-links">
         <a href="#privacy-policy">Privacy Policy</a> |
