--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
       <div class="footer-contact">
         <div class="footer-contact-title"><b>Maryjoy Ravila Retail Mart</b></div>
         <div>
-          1234 Aurora Blvd., Cubao, Quezon City, Metro Manila, 1109, Philippines<br>
+          BLK 12 LOT 5 SAN VICENTE STREET, BARANGAY SAN AGUSTIN, CITY OF DASMARIÑAS, CAVITE, REGION IV-A, PHILIPPINES<br>
           <b>Phone:</b> +63 917 625 3841 &nbsp;|&nbsp; <b>Email:</b>
           <a href="mailto:admin@maryjoyravilamart.com">admin@maryjoyravilamart.com</a>
         </div>
